feat(server): add new endpoints
